making markdown and fixing validity

--- a/src/validity_date_body.ipynb
+++ b/src/validity_date_body.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,227 +307,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>body</th>\n",
-       "      <th>word_count</th>\n",
-       "      <th>validity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\"When we decided to purchase new ultrasound eq...</td>\n",
-       "      <td>541</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A similar ban already applies to self-insured ...</td>\n",
-       "      <td>220</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Dr. Curiel is the leader for TumAdoR Project 6...</td>\n",
-       "      <td>251</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cost of manufactured product increased $4.7 mi...</td>\n",
-       "      <td>406</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The international trademark goods and services...</td>\n",
-       "      <td>87</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>If you are involved in the Diethylzinc industr...</td>\n",
-       "      <td>816</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>* UPON APPROVAL, PRODUCT WILL BE COMMERCIALISE...</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Source: XTL Biopharmaceuticals</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Fagron strengthens strategic position in USA t...</td>\n",
-       "      <td>789</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Sage Therapeutics (NASDAQ: SAGE), a clinical-s...</td>\n",
-       "      <td>1167</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>The 10 drugs, which include therapies for canc...</td>\n",
-       "      <td>269</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>The acquisition will also provide long-term st...</td>\n",
-       "      <td>149</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>The full text of this SEC filing can be retrie...</td>\n",
-       "      <td>71</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>AbbVie will present late-breaking studies on t...</td>\n",
-       "      <td>1644</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Based on the April data from the company’s ope...</td>\n",
-       "      <td>149</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>This program is an important part of a product...</td>\n",
-       "      <td>457</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>CMS\\n\\nCMS in October released a final rule to...</td>\n",
-       "      <td>1449</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>‘We’re excited about this important milestone ...</td>\n",
-       "      <td>637</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>\"Like many women who have lived through an ova...</td>\n",
-       "      <td>790</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>SECTION 1 BIOGRAPHY FRANCES ARNOLD, DIRECTOR\\n...</td>\n",
-       "      <td>1129</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Geographically, this report splits the United ...</td>\n",
-       "      <td>613</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>A left-wing coalition led by Pier Luigi Bersan...</td>\n",
-       "      <td>1316</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>* Walker's plan would roll that back to 100% a...</td>\n",
-       "      <td>592</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>The FDAs decision to grant Tafinlar in combina...</td>\n",
-       "      <td>297</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>* The Morning News Call newsletter: http://tms...</td>\n",
-       "      <td>404</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 body  word_count  validity\n",
-       "0   \"When we decided to purchase new ultrasound eq...         541         1\n",
-       "1   A similar ban already applies to self-insured ...         220         1\n",
-       "2   Dr. Curiel is the leader for TumAdoR Project 6...         251         1\n",
-       "3   Cost of manufactured product increased $4.7 mi...         406         1\n",
-       "4   The international trademark goods and services...          87         0\n",
-       "5   If you are involved in the Diethylzinc industr...         816         1\n",
-       "6   * UPON APPROVAL, PRODUCT WILL BE COMMERCIALISE...          16         0\n",
-       "7                      Source: XTL Biopharmaceuticals           3         0\n",
-       "8   Fagron strengthens strategic position in USA t...         789         1\n",
-       "9   Sage Therapeutics (NASDAQ: SAGE), a clinical-s...        1167         1\n",
-       "10  The 10 drugs, which include therapies for canc...         269         1\n",
-       "11  The acquisition will also provide long-term st...         149         1\n",
-       "12  The full text of this SEC filing can be retrie...          71         0\n",
-       "13  AbbVie will present late-breaking studies on t...        1644         1\n",
-       "14  Based on the April data from the company’s ope...         149         1\n",
-       "15  This program is an important part of a product...         457         1\n",
-       "16  CMS\\n\\nCMS in October released a final rule to...        1449         1\n",
-       "17  ‘We’re excited about this important milestone ...         637         1\n",
-       "18  \"Like many women who have lived through an ova...         790         1\n",
-       "19  SECTION 1 BIOGRAPHY FRANCES ARNOLD, DIRECTOR\\n...        1129         1\n",
-       "20  Geographically, this report splits the United ...         613         1\n",
-       "21  A left-wing coalition led by Pier Luigi Bersan...        1316         1\n",
-       "22  * Walker's plan would roll that back to 100% a...         592         1\n",
-       "23  The FDAs decision to grant Tafinlar in combina...         297         1\n",
-       "24  * The Morning News Call newsletter: http://tms...         404         1"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-aa597b2735aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#creates a data frame with all the valid body points along with the body info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvalid_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mvalid_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'body'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext_body_all\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mvalid_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'word_count'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword_count_all\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mvalid_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'validity'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidity_all\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -547,9 +339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-e929ac8d1db6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'publication_datetime'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdates_sub\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dates = df['publication_datetime']\n",
     "dates_sub = dates.head(10)"
@@ -557,14 +361,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2014-01-30', '2014-01-23', '2014-01-23', '2018-04-16', '2017-07-10', '2018-04-16', '2018-04-02', '2016-12-20', '2018-04-03', '2018-04-23']\n"
+     "ename": "NameError",
+     "evalue": "name 'dates_sub' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-eec72aae00e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mdate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdates_sub\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m      \u001b[0mdates_iso\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromtimestamp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m1000.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m#dates_is.append(timestamp.strftime('%Y-%m-%d %H:%M:%S'))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dates_sub' is not defined"
      ]
     }
    ],
@@ -606,7 +414,7 @@
     "#valid_date_df.iloc[valid_date_df[(valid_date_df['Date'] > '2015-01-01') & (valid_date_df['Date'] < '2020-02-01')]]\n",
     "#\n",
     "\n",
-    "validity_date = list((valid_date_df['Date'] > '2015,1,1') & (valid_date_df['Date'] < '2018,1,1'))\n",
+    "validity_date = list(int((valid_date_df['Date'] > '2015,1,1') & (valid_date_df['Date'] < '2018,1,1')))\n",
     "\n",
     "#alidity_date = []\n",
     "\n",
