Put all the invalid company codes into a dataframe

--- a/src/ianDataProfiling.ipynb
+++ b/src/ianDataProfiling.ipynb
@@ -157,21 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'code_dict' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-5e6730f72897>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Here is the validity function I will be using\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#returns the sum of True and divides by the length of the unique list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mcheckValidity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcode_dict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mls\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'code_dict' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Here is the validity function I will be using\n",
     "#returns the sum of True and divides by the length of the unique list\n",
@@ -337,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,96 +1144,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>JRESST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>ALCAZJJ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>AGKQTTQ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>GCHDLO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>CBIINS</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0     code\n",
-       "0           0   JRESST\n",
-       "1           1  ALCAZJJ\n",
-       "2           2  AGKQTTQ\n",
-       "3           3   GCHDLO\n",
-       "4           4   CBIINS"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "invalid = pd.read_csv(\"../data/working/invalidcompanycodes.csv\")\n",
-    "invalid.head()"
+    "<h3><b>Put all the invalid company codes into a dataframe</b><h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "del invalid['Unnamed: 0']"
+    "invalid_df = pd.read_csv(\"../data/working/invalidcompanycodes.csv\", index_col = [0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1294,58 +1210,100 @@
        "      <td>CBIINS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>DDAKTXS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9678</th>\n",
-       "      <td>DMNADV</td>\n",
+       "      <th>6</th>\n",
+       "      <td>BZJNJFQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9679</th>\n",
-       "      <td>ABBSHEK</td>\n",
+       "      <th>7</th>\n",
+       "      <td>ACDVOSV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9680</th>\n",
-       "      <td>AAOFAP</td>\n",
+       "      <th>8</th>\n",
+       "      <td>MEVAGI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9681</th>\n",
-       "      <td>SOJOUC</td>\n",
+       "      <th>9</th>\n",
+       "      <td>IAQHKB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9682</th>\n",
-       "      <td>KSFELI</td>\n",
+       "      <th>10</th>\n",
+       "      <td>BYUUMVJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>AIMKNQK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>AITZLZT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>ABIKGMC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>IRONCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>BYSFXOB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>RDIECI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>TECCOD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>SNUTRI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>HUAIGL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9683 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         code\n",
-       "0      JRESST\n",
-       "1     ALCAZJJ\n",
-       "2     AGKQTTQ\n",
-       "3      GCHDLO\n",
-       "4      CBIINS\n",
-       "...       ...\n",
-       "9678   DMNADV\n",
-       "9679  ABBSHEK\n",
-       "9680   AAOFAP\n",
-       "9681   SOJOUC\n",
-       "9682   KSFELI\n",
-       "\n",
-       "[9683 rows x 1 columns]"
+       "       code\n",
+       "0    JRESST\n",
+       "1   ALCAZJJ\n",
+       "2   AGKQTTQ\n",
+       "3    GCHDLO\n",
+       "4    CBIINS\n",
+       "5   DDAKTXS\n",
+       "6   BZJNJFQ\n",
+       "7   ACDVOSV\n",
+       "8    MEVAGI\n",
+       "9    IAQHKB\n",
+       "10  BYUUMVJ\n",
+       "11  AIMKNQK\n",
+       "12  AITZLZT\n",
+       "13  ABIKGMC\n",
+       "14   IRONCC\n",
+       "15  BYSFXOB\n",
+       "16   RDIECI\n",
+       "17   TECCOD\n",
+       "18   SNUTRI\n",
+       "19   HUAIGL"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "invalid"
+    "invalid_df.head(20)"
    ]
   },
   {
@@ -1360,6 +1318,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
